@@ -3400,7 +3400,7 @@ name|getSolrProperties
 argument_list|()
 argument_list|)
 expr_stmt|;
-comment|// initialize gauges for reporting the number of cores
+comment|// initialize gauges for reporting the number of cores and disk total/free
 name|String
 name|registryName
 init|=
@@ -3525,6 +3525,76 @@ name|toString
 argument_list|()
 argument_list|,
 literal|"cores"
+argument_list|)
+expr_stmt|;
+name|metricManager
+operator|.
+name|registerGauge
+argument_list|(
+name|registryName
+argument_list|,
+parameter_list|()
+lambda|->
+name|cfg
+operator|.
+name|getCoreRootDirectory
+argument_list|()
+operator|.
+name|toFile
+argument_list|()
+operator|.
+name|getTotalSpace
+argument_list|()
+argument_list|,
+literal|true
+argument_list|,
+literal|"totalSpace"
+argument_list|,
+name|SolrInfoMBean
+operator|.
+name|Category
+operator|.
+name|CONTAINER
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|"fs"
+argument_list|)
+expr_stmt|;
+name|metricManager
+operator|.
+name|registerGauge
+argument_list|(
+name|registryName
+argument_list|,
+parameter_list|()
+lambda|->
+name|cfg
+operator|.
+name|getCoreRootDirectory
+argument_list|()
+operator|.
+name|toFile
+argument_list|()
+operator|.
+name|getUsableSpace
+argument_list|()
+argument_list|,
+literal|true
+argument_list|,
+literal|"usableSpace"
+argument_list|,
+name|SolrInfoMBean
+operator|.
+name|Category
+operator|.
+name|CONTAINER
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|"fs"
 argument_list|)
 expr_stmt|;
 if|if
