@@ -168,6 +168,30 @@ begin_import
 import|import
 name|java
 operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Paths
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -6850,6 +6874,79 @@ name|CORE
 operator|.
 name|toString
 argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// initialize disk total / free metrics
+name|Path
+name|dataDirPath
+init|=
+name|Paths
+operator|.
+name|get
+argument_list|(
+name|dataDir
+argument_list|)
+decl_stmt|;
+name|File
+name|dataDirFile
+init|=
+name|dataDirPath
+operator|.
+name|toFile
+argument_list|()
+decl_stmt|;
+name|manager
+operator|.
+name|registerGauge
+argument_list|(
+name|registry
+argument_list|,
+parameter_list|()
+lambda|->
+name|dataDirFile
+operator|.
+name|getTotalSpace
+argument_list|()
+argument_list|,
+literal|true
+argument_list|,
+literal|"totalSpace"
+argument_list|,
+name|Category
+operator|.
+name|CORE
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|"fs"
+argument_list|)
+expr_stmt|;
+name|manager
+operator|.
+name|registerGauge
+argument_list|(
+name|registry
+argument_list|,
+parameter_list|()
+lambda|->
+name|dataDirFile
+operator|.
+name|getUsableSpace
+argument_list|()
+argument_list|,
+literal|true
+argument_list|,
+literal|"usableSpace"
+argument_list|,
+name|Category
+operator|.
+name|CORE
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|"fs"
 argument_list|)
 expr_stmt|;
 block|}
