@@ -485,10 +485,54 @@ block|}
 argument_list|)
 argument_list|)
 expr_stmt|;
-comment|// all metrics
-comment|// XXX anything interesting here?
-comment|//add(new SolrReporter.Specification(OVERSEER_GROUP, "node", SolrMetricManager.overridableRegistryName(SolrInfoMBean.Group.node.toString()),
-comment|//    Collections.emptySet())); // all metrics
+name|add
+argument_list|(
+operator|new
+name|SolrReporter
+operator|.
+name|Report
+argument_list|(
+name|CLUSTER_GROUP
+argument_list|,
+literal|"node"
+argument_list|,
+name|SolrMetricManager
+operator|.
+name|overridableRegistryName
+argument_list|(
+name|SolrInfoMBean
+operator|.
+name|Group
+operator|.
+name|node
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+argument_list|,
+operator|new
+name|HashSet
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+block|{
+block|{
+name|add
+argument_list|(
+literal|"CONTAINER\\.cores\\..*"
+argument_list|)
+expr_stmt|;
+name|add
+argument_list|(
+literal|"CONTAINER\\.fs\\..*"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|add
 argument_list|(
 operator|new
