@@ -290,17 +290,22 @@ argument_list|)
 expr_stmt|;
 name|add
 argument_list|(
+literal|"CORE\\.fs.*"
+argument_list|)
+expr_stmt|;
+name|add
+argument_list|(
 literal|"REPLICATION.*"
 argument_list|)
 expr_stmt|;
 name|add
 argument_list|(
-literal|"INDEX.flush.*"
+literal|"INDEX\\.flush.*"
 argument_list|)
 expr_stmt|;
 name|add
 argument_list|(
-literal|"INDEX.merge.major.*"
+literal|"INDEX\\.merge\\.major.*"
 argument_list|)
 expr_stmt|;
 name|add
